--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,16 +6,14 @@ on:
     branches:
       - main
 
-    # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
-
-  # Run tests for any PRs.
+  # Run build for any PRs.
   pull_request:
+    branches:
+      - main
 
 jobs:
 
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
